kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-app-backend
  template:
    metadata:
      labels:
        app: finance-app-backend
    spec:
      containers:
        - image: <docker image>
          name: finance-app-backend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
---
kind: Service
apiVersion: v1
metadata:
  name: finance-app-backend
spec:
  selector:
    app: finance-app-backend
  ports:
    - port: 80
      name: http
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-app-backend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: <host>
      http:
        paths:
          - backend:
              service:
                name: finance-app-backend
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
