kubernetes/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-app-backend
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-app-backend
                port:
                  name: http
